--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -230,6 +230,10 @@
   "tetra.stats.overpower.tooltip": "Hold right-click to charge up an attack that deals §e%s%% (%s)§f attack damage but barely causes any knockback.\n \n§7Applies §e2§7 stacks of §eExhausted§7 on the target and §e1§7 stack on the attacker. Each stack reduces movement speed by §e10%%§7 and attack speed and harvest speed by §e5%%§7. The attacker gets §eExhausted§7 even if the attack fails.\n \n§7Exhausted duration: §e%s§7 seconds\n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
   "tetra.stats.overpower.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
 
+  "tetra.stats.reap": "Reap",
+  "tetra.stats.reap.tooltip": "Hold right-click to charge up a sweeping attack that deals §e%s%% (%s)§f attack damage to entities in an area.\n \n§7Area of Effect: §e%s§7 blocks\n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
+  "tetra.stats.reap.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
+
   "tetra.stats.pry_armor": "Pry arm.",
   "tetra.stats.pry_armor.tooltip": "Right-click an entity to deal §e50%% (%s)§f attack damage and reduces the target's armor by §e%s§f for §e%s§f seconds, the armor reduction effect stacks.\n \n§7Cooldown: §e%s§7 seconds",
   "tetra.stats.pry_armor.tooltip_extended": "Cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack. The duration of the armor reduction effect is refreshed every time it is applied.",
@@ -1248,6 +1252,7 @@
   "tetra.synergy.double/warhammer": "Warhammer",
   "tetra.synergy.double/war_pick": "War pick",
   "tetra.synergy.double/guisarme": "Guisarme",
+  "tetra.synergy.double/warsickle": "Warsickle",
 
   "tetra/schematic/double/basic_handle/basic_handle.name": "Basic handle",
   "tetra/schematic/double/basic_handle/basic_handle.description": "Replace the handle for the head. A sturdier handle supports heavier and more advanced tool heads.\n \nMaterial §fdensity§r slightly decreases §fattack speed§r.",
