added ability speed modifier for butts of warforged tools

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -206,6 +206,11 @@
   "tetra.stats.howling": "Howling",
   "tetra.stats.howling.tooltip": "Swinging this item will envelop the wielder in howling winds which may deflect incoming projectiles.\n \n§7Each swing adds §e%s§7 stack(s) of the effect with a §e%s§7 second duration. Each stack grants:\n* §e12.5%%§7 chance to deflect\n* §e-5%%§7 movement speed\n* §e2.5%%§7 chance for a deflected projectile to go back to where it came from.",
 
+  "tetra.stats.ability_speed_bonus": "Light",
+  "tetra.stats.ability_speed_bonus.tooltip": "Reduces charge time and cooldown by §e%s§r",
+
+  "tetra.stats.ability_speed_bonus_instant.tooltip": "Reduces cooldown by §e%s§r",
+
   "tetra.stats.execute": "Execute",
   "tetra.stats.execute.tooltip": "Hold right-click to charge up a powerful attack with §e100%% (%s)§f base damage, the damage is further increased by:\n§e%s%%§7 for each missing percent of the target's health\n§e%s%%§7 for each stack of any harmful effect on the target\n \n§7Charge time: §e%s§7 seconds\n§7Cooldown: §e%s§7 seconds",
   "tetra.stats.execute.tooltip_extended": "Charge time and cooldown is based on the item's swing speed. Bonus damage from effects like smite is added to the base damage of the attack.",
